sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/Activation_Checklist_Validation__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13303: It is used to store the validations and their respective error/success messages and the service classes to be accessed.</description>
    <label>Activation Checklist Validation</label>
    <pluralLabel>Activation Checklist Validations</pluralLabel>
</CustomObject>