sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Activation_Validation_Name__c.field-meta.xml
<CustomField>
    <fullName>Activation_Validation_Name__c</fullName>
    <description>LEM-13305: It is used to store the name of validations required for activation.</description>
    <label>Activation Validation Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDOA</fullName>
                <default>true</default>
                <label>PDOA</label>
            </value>
            <value>
                <fullName>Duplicate Work Orders</fullName>
            </value>
            <value>
                <fullName>MSID</fullName>
            </value>
            <value>
                <fullName>Submarket</fullName>
            </value>
            <value>
                <fullName>Starting Point ID</fullName>
            </value>
            <value>
                <fullName>Commission Rates</fullName>
            </value>
            <value>
                <fullName>Tier Level</fullName>
            </value>
            <value>
                <fullName>Banking Information</fullName>
            </value>
            <value>
                <fullName>Store Is Partner</fullName>
            </value>
            <value>
                <fullName>Business Is Active</fullName>
            </value>
            <value>
                <fullName>Active Menu Count</fullName>
            </value>
            <value>
                <fullName>Business ID</fullName>
            </value>
            <value>
                <fullName>Order Protocol</fullName>
            </value>
            <value>
                <fullName>Offers Pickup/Delivery/Dashpass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>