sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>LEM-13303: It is used to store the error message of the validation.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>