sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13303: It is used to store if the current validation is active or not.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>