sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>LEM-13303: It is used to store the object that needs to be validated.</description>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>