sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Service_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Class_Name__c</fullName>
    <description>LEM-13303: It is used to the service class where validation is done.</description>
    <label>Service Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>