sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Service_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Method_Name__c</fullName>
    <description>LEM-13303: It is used to store service method name where the validation will be done.</description>
    <label>Service Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>