sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>LEM-13612: Source of the Activation Checklist Validation.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>