sfdx-source/force-app/main/default/objects/Activation_Checklist_Validation__mdt/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <description>LEM-13303: It is used to store the success message for the validation.</description>
    <label>Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>